redactable/tests/ui/to_redacted_output_raw_number_rejected.stderr
error[E0277]: the trait bound `u64: ToRedactedOutput` is not satisfied
 --> tests/ui/to_redacted_output_raw_number_rejected.rs:6:20
  |
6 |     require_output(&42_u64);
  |     -------------- ^^^^^^^ the trait `ToRedactedOutput` is not implemented for `u64`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `ToRedactedOutput`:
            NotSensitiveDebug<T>
            NotSensitiveDisplay<T>
            NotSensitiveJson<'_, T>
            RedactedJson
            RedactedJsonRef<'_, T>
            RedactedOutput
            RedactedOutputRef<'_, T>
            SensitiveValue<T, P>
note: required by a bound in `require_output`
 --> tests/ui/to_redacted_output_raw_number_rejected.rs:3:22
  |
3 | fn require_output<T: ToRedactedOutput>(_: &T) {}
  |                      ^^^^^^^^^^^^^^^^ required by this bound in `require_output`
